# InfoNav

./: .gitignore  CODE_STRUCTURE.md  INFONAV_VS_APEXNAV_COMPARISON.md  README.md  habitat_evaluation.py  habitat_manual_control.py  habitat_manual_control_vlm_test.py  llm_hypothesis_analyzer.py  main.tex  vlm_environment_analyzer.py
basic_utils/logging/: __init__.py  log_manager.py
basic_utils/record_episode/: write_record.py
config/: habitat_eval_hm3dv1.yaml  habitat_eval_hm3dv2.yaml  habitat_eval_hm3dv2.yaml.backup  habitat_eval_mp3d.yaml  logging_config.yaml
docs/: CODE_ARCHITECTURE.md  CODE_MODIFICATION_GUIDE.md  DETECTION_REFACTOR_PLAN.md  NEGATIVE_FEEDBACK_OPTIMIZATION.md  VLM_APPROACH_VERIFICATION.md  VLM_SLIDING_WINDOW_PROPOSAL.md  VLM_VIEWPOINT_RELAXATION.md  WEIGHTED_TSP_ALGORITHM.md  WTRP_FOR_PAPER.md
habitat2ros/: habitat_publisher.py
llm/: semantic_expansion_service.py
llm/answer_reader/: answer_reader.py
llm/answers/: llm_answer_hm3d.txt
llm/client/: deepseek_answer.py
llm/fusion/: integration.py  (+1 more)
scripts/: run_evaluation_with_restart.sh  run_retry_missing.sh  run_with_periodic_restart.sh  set_logging_env.sh  start_vlm_servers.sh  system_monitor.sh
src/planner/plan_env/: CMakeLists.txt  package.xml
src/planner/plan_env/include/plan_env/: frontier_map2d.h  ig_value_map.h  map_ros.h  multi_source_value_map.h  object_map2d.h  sdf_map2d.h
src/planner/plan_env/msg/: IGScore.msg  ObjectUpdateInfo.msg  SemanticPrompts.msg  SemanticScores.msg  VLMVerificationRequest.msg  VLMVerificationResult.msg
src/planner/plan_env/scripts/: multi_source_itm_node.py  multi_source_itm_node_wrapper.sh  qwen_vlm_prompts.py  qwen_vlm_validation_node.py  test_semantic_prompts.py  vlm_approach_verifier.py
src/planner/plan_env/src/: frontier_map2d.cpp  ig_value_map.cpp  map_ros.cpp  multi_source_value_map.cpp  object_map2d.cpp  sdf_map2d.cpp
src/planner/plan_env/srv/: ValidateObject.srv
vlm/: server_wrapper.py
(+31 files in other folders)
